# grape

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
App/Source/: main.cpp
Core/Source/Core/: nfa.cpp  nfa.h  nfa_fragment.h  regex_compiler.cpp  regex_compiler.h  state.h  token.h  transition.h
Scripts/: Setup-Linux.sh  Setup-Mac.sh  Setup-Windows.bat
src/: CMakeLists.txt  main.cpp
src/grape/: compiler.cpp  compiler.h  nfa.cpp  nfa.h  parser.cpp  parser.h  state.h  token.h  transition.h
tests/: CMakeLists.txt  tests.cpp
